typescript/checker/tests/conformance/es6/yieldExpressions/YieldStarExpression3_es6.ts.stderr
error: Unexpected token Some(Semi)
 --> $DIR/tests/conformance/es6/yieldExpressions/YieldStarExpression3_es6.ts:3:12
  |
3 |     yield *;
  |            ^

